--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "koa-bodyparser": "^4.2.1",
     "koa-decorator-ts": "^1.3.8",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.10",
     "log4js": "^3.0.3",
     "moment": "^2.22.2",
     "mongodb": "^3.1.1",
